Fixes: * removing large number of files during db update * cyrillic text in some files * background blinking during blurring

--- a/web-components/cs-loading/css/cs-loading.scss
+++ b/web-components/cs-loading/css/cs-loading.scss
@@ -10,6 +10,7 @@
 	bottom     : 0px;
 	font-size  : 2rem;
 	height     : 2rem;
+	left       : 0;
 	margin     : auto;
 	position   : absolute;
 	text-align : center;
